--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "@liskhq/lisk-api-client": "^3.0.1",
     "@liskhq/lisk-client": "^4.0.0",
     "@liskhq/lisk-cryptography": "^2.4.2",
-    "@liskhq/lisk-p2p": "^0.3.5",
     "@liskhq/lisk-passphrase": "^3.0.0",
-    "@liskhq/lisk-transactions": "^3.0.2",
+    "@liskhq/lisk-transactions": "^4.0.0",
     "algolia-places-react": "^1.6.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-node": "^10.0.0",
@@ -18,7 +17,7 @@
     "jquery": "^3.4.1",
     "konva": "^4.0.12",
     "lisk-genesis": "^0.1.0",
-    "lisk-sdk": "^2.3.8",
+    "lisk-sdk": "^4.0.0",
     "localforage": "^1.7.3",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
@@ -80,7 +79,8 @@
     "build-sw": "node ./src/sw-build.js",
     "clean-cra-sw": "rm -f build/precache-manifest.*.js && rm -f build/service-worker.js",
     "build": "react-scripts build",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "postinstall": "node ./bufferFix.js"
   },
   "eslintConfig": {
     "extends": "react-app"
