--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "react-intro-slider": "^1.2.5",
     "react-load-image": "^0.1.7",
     "react-loadable": "^5.5.0",
+    "react-media": "^1.10.0",
     "react-moment": "^0.9.7",
     "react-places-autocomplete": "^7.3.0",
     "react-qr-reader": "^2.2.1",
     "react-qr-svg": "^2.2.1",
     "react-redux": "^7.0.3",
+    "react-responsive": "^8.1.1",
     "react-router-dom": "4.1.1",
     "react-skeleton-loader": "^1.0.4",
     "react-slick": "^0.25.2",
